# dogs-emotion-recognition

./: .gitmodules  README.md  pyproject.toml
docs/: links
docs/onboarding/: best-practices.md  dog-emotions-cryteria.md  onboarding.md
model/: README.md
model/docs/: dataset.md
model/scripts/: augment.py  grad_cam.py  grad_cam_torch.py  grad_cam_xception_v2.py  models_transfer_learning.ipynb  our_model.py
results/: RESULTS.md
scripts/: augment.py  dog_flw.py  general_neural_net.py  grad_cam_torch.py  grad_cam_xception_v2.py  our_model.py
