[project]
name = "dogs-emotion-recognition"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "grad-cam>=1.5.5",
    "opencv-python>=4.12.0.88",
    "pillow>=11.3.0",
    "pytorch-gradcam>=0.2.1",
    "requests>=2.32.4",
    "tensorboard>=2.20.0",
    "torch>=2.7.1",
    "torcheval>=0.0.7",
    "torchinfo>=1.8.0",
    "torchvision>=0.22.1",
]